[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/gui/menus/facility/manage/resource_slider.gd" type="Script" id=1]

[node name="ResourceSlider" type="PanelContainer"]
margin_right = 288.0
margin_bottom = 226.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 281.0
margin_bottom = 219.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 274.0
margin_bottom = 12.0
text = "Select how much to use"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 274.0
margin_bottom = 96.0
alignment = 1

[node name="ResourceIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_right = 135.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
expand = true
stretch_mode = 6

[node name="PlayerBalance" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 139.0
margin_top = 26.0
margin_right = 274.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 274.0
margin_bottom = 138.0

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
margin_right = 172.0
margin_bottom = 16.0
size_flags_horizontal = 3
value = 50.0

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 176.0
margin_right = 274.0
margin_bottom = 22.0
value = 50.0

[node name="ConfirmButton" type="Button" parent="VBoxContainer"]
margin_top = 158.0
margin_right = 274.0
margin_bottom = 176.0
text = "Confirm"

[node name="Debouncer" type="Timer" parent="."]

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/HSlider" to="." method="_on_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_value_changed"]
[connection signal="pressed" from="VBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="timeout" from="Debouncer" to="." method="_on_Debouncer_timeout"]
